--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "安裝套件": "npm install",
-    "壓縮圖片": "gulp mini_img"
+    "壓縮圖片": "gulp mini_img",
+    "上線打包": "gulp online"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-babel": "^8.0.0",
+    "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-file-include": "^2.3.0",
