--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/sexfat/tfd105/issues"
   },
-  "homepage": "https://github.com/sexfat/tfd105#readme"
+  "homepage": "https://github.com/sexfat/tfd105#readme",
+  "dependencies": {
+    "jquery": "^3.6.0"
+  }
 }
