--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "dependencies": {
     "gsap": "^3.10.1",
     "jquery": "^3.6.0"
+  },
+  "devDependencies": {
+    "css-loader": "^5.2.4",
+    "style-loader": "^2.0.0"
   }
 }
