--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   },
   "devDependencies": {
     "css-loader": "^5.2.4",
+    "html-webpack-plugin": "^4.5.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0"
   }
 }
